# source-os

./: AGENTS.md  FEDORA_ATOMIC.md  LICENSE  README.md  flake.nix  result
.github/: copilot-instructions.md
.sourceos/: manifest.json
asahi/: README.md  installer_data.json
builders/: README.md  builder-aarch64.json  canary-x86_64.json  stable-x86_64.json
channels/: README.md  candidate.json  dev.json  stable.json
docs/: LIBERTY_STACK_COMPONENT_MAPPING.md  LIBERTY_STACK_LINUX_SUBSTRATE.md  REPO_TOPOLOGY.md  SIGNING_SETUP.md  SOURCEOS_OFFICE_INTEGRATION_PROFILE.md  WORKSTATION_CONTRACTS_BOOTSTRAP.md  agentplane-integration.md  openclaw-local-first.md  repository-layout.md  software-oprisk-runtime-alignment.md  sourceos-shell-command-bus.md  sourceos-shell-integration.md  sourceos-shell-launcher-bridge.md  sourceos-shell-pdf-stack.md  sourceos-shell-service-graph.md
hosts/: README.md
images/: README.md  builder-aarch64.nix  canary-x86_64.nix  installer-common.nix  iso-aarch64.nix  iso-x86_64.nix  release-x86_64.nix
modules/: README.md
profiles/: README.md
runtime/: BUILD.md  Cargo.toml  README.md
runtime/quorumd/: Cargo.toml  README.md
runtime/quorumd/examples/: quorum_votes.rs
runtime/quorumd/src/: lib.rs  main.rs
runtime/triune-anchor/: Cargo.toml  README.md
runtime/triune-anchor/src/: lib.rs
runtime/triune-ctx/: Cargo.toml  README.md
runtime/triune-ctx/src/: lib.rs
runtime/triune-flow/: Cargo.toml  README.md  TESTING.md  output.sample.json
runtime/triune-flow/src/: main.rs
runtime/triune-flow/tests/: smoke.rs
runtime/watchdog-validator/: Cargo.toml  README.md
runtime/watchdog-validator/examples/: triune_flow.rs
runtime/watchdog-validator/src/: attestation.rs  audit_anchor.rs  lib.rs  main.rs  quarantine.rs  replay_packer.rs
scripts/: README.md  bpf_key.py  build-asahi-package.sh  build-custom-image.sh  build-m1n1-bundle.sh  deploy-stage2.sh  enroll.sh  finish-step2.sh  gcp-build-custom-startup.sh  get-sourceos.sh  install-image.sh  install-on-device.sh  katello-sourceos-setup.sh  preflight.sh  promote.sh  (+2 more)
(+152 files in other folders)
