[package]
name = "quorumd"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Minimal validator quorum daemon scaffold for SourceOS runtime"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
