[package]
name = "triune-anchor"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Append-only audit anchoring for SourceOS runtime events"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
