[package]
name = "triune-flow"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Standalone integration flow for Triune runtime crates"

[workspace]

[dependencies]
serde_json = "1"
triune-ctx = { path = "../triune-ctx" }
cap-checker = { path = "../cap-checker" }
triune-anchor = { path = "../triune-anchor" }
watchdog-validator = { path = "../watchdog-validator" }
quorumd = { path = "../quorumd" }
