[package]
name = "watchdog-validator"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Watchdog and validator orchestration for Triune and Exodus runtime controls"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
